--- a/views/personalized-lineup.handlebars
+++ b/views/personalized-lineup.handlebars
@@ -1,11 +1,41 @@
 <h2 style="text-align: center;">Your personal {{festivalName}} lineup</h2>
+<form id="generatePlaylistForm" action="/generate-playlist", method="POST">
+    <input type="hidden" name="festivalName" value="{{festivalName}}" />
+    <input type="hidden" name="tracksPerArtist" value="{{tracksPerArtist}}" />
+    <input type="hidden" name="artistIds" />
+    <input type="hidden" name="trackIds" />
+    <input type="submit">Click here to generate a Spotify playlist</input>
+</form>
 <ul style="list-style: none; max-width: 33%;">
     {{#each acts}}
-        <li>{{this.name}}</li>
-        <ul style="list-style: none;">
-            {{#each this.tracks}}
-            <li>{{this.name}}</li>
-            {{/each}}
-        </ul>
+    <li class="artist" id="{{this.id}}">{{this.name}} - <a href="{{this.external_urls.spotify}}">Spotify</a></li>
+    <ul style="list-style: none;">
+        {{#each this.tracks}}
+        <li class="track" id="{{this.id}}">{{this.name}}</li>
+        {{/each}}
+    </ul>
     {{/each}}
 </ul>
+
+<script>
+var form = document.getElementById("generatePlaylistForm");
+form.addEventListener("submit", function() {
+    var artists = document.getElementsByClassName("artist");
+    var artistIds = [];
+    for (const artist of artists) {
+        artistIds.push(artist.id);
+    }
+
+    var artistIdsElement = document.getElementsByName("artistIds")[0];
+    artistIdsElement.value = artistIds.join(",");
+
+    var tracks = document.getElementsByClassName("track");
+    var trackIds = [];
+    for (const track of tracks) {
+        trackIds.push(track.id);
+    }
+
+    var trackIdsElement = document.getElementsByName("trackIds")[0];
+    trackIdsElement.value = trackIds.join(",");
+});
+</script>
