WIP fixing up each page's requests to not use hacked backend cookie setting and resetting

--- a/views/personalized-lineup.handlebars
+++ b/views/personalized-lineup.handlebars
@@ -1,5 +1,5 @@
 <h2 style="text-align: center;">Your personal {{festivalName}} lineup</h2>
-<form id="generatePlaylistForm" action="/generate-playlist", method="POST">
+<form id="generatePlaylistForm" action="/generate-spotify-playlist", method="POST">
     <input type="hidden" name="festivalName" value="{{festivalName}}" />
     <input type="hidden" name="tracksPerArtist" value="{{tracksPerArtist}}" />
     <input type="hidden" name="artistIds" />
