--- a/views/customize-list.handlebars
+++ b/views/customize-list.handlebars
@@ -1,5 +1,5 @@
 <h2>Customize your {{festival.name}} {{festival.year}} lineup</h2>
-<form id="listOptionsForm" action="/generate" method="POST" style="display: flex; flex-direction: column; max-width: 50%;">
+<form id="listOptionsForm" action="/generate-lineup-list" method="POST" style="display: flex; flex-direction: column; max-width: 50%;">
     <div id="formContent" style="display: flex; flex-direction: row; justify-content: space-between;">
         <div id="filters" style="max-width: 40%;">
             <u>Filters</u>
