--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,5 @@
+<h1>Lineup List</h1>
+<p>Create a festival lineup of artists according to your preferred genres. Once you've chosen your artists you also have the option to generate a playlist within your Spotify account.</p>
 <h3>Choose a festival to begin</h3>
 <form action="/customize" method="GET" style="display: flex; flex-direction: column;">
     <select name="festival" style="margin: 1rem 0 2rem">
