--- a/views/generate-playlist-success.handlebars
+++ b/views/generate-playlist-success.handlebars
@@ -1,1 +1,1 @@
-<h3>Successfully generated playlist '{{playlistName}}' for {{festival.name}} {{festival.year}}<h3>
+<h3>Successfully generated playlist '{{playlistName}}' for {{festival.display_name}} {{festival.year}}<h3>
