--- a/views/personalized-lineup.handlebars
+++ b/views/personalized-lineup.handlebars
@@ -1,4 +1,4 @@
-<h2 style="text-align: center;">Your personal {{festivalName}} lineup</h2>
+<h2 style="text-align: center;">Your personal {{festivalDisplayName}} lineup</h2>
 <form id="generatePlaylistForm" action="/generate-spotify-playlist", method="POST" style="max-width: 33%; text-align: center;">
     <p style="margin-bottom: 0;">Click below to generate a Spotify playlist</p>
     <p style="font-size: smaller; margin-top: 0;">You will need to authorize Lineup List to access your Spotify. The only permissions used are for reading your existing playlists (to determine if you already have a Lineup List playlist created for this festival) and for creating a new playlist within your account.</p>
