Add goatcounter nltcs and switch it off unless loading prod page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>Lineup List</title>
+    {{#if prod}}
+    <script data-goatcounter="https://lineuplist.goatcounter.com/count"
+            async src="//gc.zgo.at/count.js"></script>
+    {{/if}}
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
     {{{body}}}
