Add support for multiple years per festival. Add session state for beginning of customization. Add mailto on homepage for suggesting festivals/years. Fix some flexbox alignment

--- a/views/customize-list.handlebars
+++ b/views/customize-list.handlebars
@@ -52,7 +52,7 @@
     <input type="hidden" id="artistIds" name="artistIds">
     <input type="hidden" name="festivalName" value="{{festival.name}}">
     <input type="hidden" name="festivalDisplayName" value="{{festival.display_name}}">
-    <input type="hidden" name="festivalYear" value="{{festival.year}}">
+    <input type="hidden" name="festivalYear" value="{{festivalYear}}">
     <input style="margin: 1rem; align-self: center;" type="submit">
 </form>
 
