--- a/views/customize-list.handlebars
+++ b/views/customize-list.handlebars
@@ -113,6 +113,7 @@ function refreshArtistList() {
         .filter(x => x.checked)
         .map(x => x.value);
 
+console.log(selectedDays);
     for (var i = 0; i < artists.length; i++) {
         var artistGenres = JSON.parse(artists[i].getAttribute("data-genres"));
         var artistDay = artists[i].getAttribute("data-day");
@@ -120,7 +121,9 @@ function refreshArtistList() {
         // make sure we hide or show the whole div containing checkbox and name
         var artistDiv = document.getElementById(artists[i].value);
         artistDiv.style.opacity = getArtistOpacity(selectedGenres, artistGenres);
-        if (!artistGenres.some(x => selectedGenres.includes(x)) || (selectedDays.length > 1 && !selectedDays.includes(artistDay))) {
+
+        var noDayMatch = days.length > 0 && (selectedDays.length == 0 || !selectedDays.includes(artistDay));
+        if (!artistGenres.some(x => selectedGenres.includes(x)) || noDayMatch) {
             artistDiv.style.display = "none";
         } else {
             artistDiv.style.display = "block";
