--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,7 +12,7 @@
         </select>
     </div>
     <a href="mailto:brian.team.jr@gmail.com" style="font-size: smaller; margin-bottom: 2rem;">Don't see the festival or year you want? Let me know</a>
-    <input type="submit" style="align-self: center;"/>
+    <input type="submit" class="pure-button pure-button-primary" style="align-self: center;"/>
 </form>
 
 <script>
