Add canonical url support

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
     <script data-goatcounter="https://lineuplist.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure-min.css" integrity="sha384-Uu6IeWbM+gzNVXJcM9XV3SohHtmWE+3VGi496jvgX1jyvDTXfdK+rfZc8C1Aehk5" crossorigin="anonymous">
+    <link rel="canonical" href="{{canonicalUrl}}">
     {{else}}
     <!-- Non-minified for dev -->
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.6/build/pure.css" crossorigin="anonymous">
@@ -29,7 +30,6 @@
     <!-- Icon made by surang from www.flaticon.com -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="/favicon.ico">
-
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
     {{{body}}}
